--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
  <head>
   <title> Shivam portfolio</title>
+  <script src="port.js"></script>
  
   <style>
     h1{color:#345435;}
@@ -10,7 +11,6 @@
       font-size:50px;
       }
     body{
-      login form
       
     background-color:black;
     color:#2E4053;
@@ -135,7 +135,7 @@
   <div class="fam">
 
   <h2 id="fa" align="middle" class="dec" ><em>MY FAMILY</em></h2>
-  I live in a joint family.My father's name is <strong><em>Mr Sanjay Saraf.</em></strong>and my mother's name is <strong><em>Mrs Maya Saraf</em></strong>.I have a younger brother whose name is <strong><em>Sajal Saraf</em></strong>My grandparents,uncles,cousins all live together in a single house.We belong to Lalitpur</a> district of Uttar Pradesh state of India.My father is having his own business of sarees while my mother is a housewife.I am having a huge number of cousins namely
+  I live in a joint family.My father's name is <strong><em>Mr Sanjay Saraf.</em></strong>and my mother's name is <strong><em>Mrs Maya Saraf</em></strong>.I have a younger brother whose name is <strong><em>Sajal Saraf</em></strong>My grandparents,uncles,cousins all live together in a single house.We belongs to Lalitpur</a> district of Uttar Pradesh state of India.My father is having his own business of sarees while my mother is a housewife.I am having a huge number of cousins namely
   <ul style="font-size:20px;">
   <li>Akash Saraf</li>
   <li>Kanchi Saraf</li>
