--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <div class="abt head1">
   <h1 id="about" align="middle" font-sixe="100px" class="dec">About</h1>
   <div class="try"><img src="https://scontent-bom1-1.xx.fbcdn.net/v/t1.0-0/p206x206/26001207_1040495039422703_4203008661810955430_n.jpg?_nc_cat=0&oh=4b159f708e8fd4b225acc48be77f61ae&oe=5BFA1ECD" alt="Shivam Saraf" class="image" margin:"50%"></div>
-  <p>Hello everyone.My name is <strong>Shivam Saraf</strong>.I am a 20 yr old guy who is pursuing dual degree for B.tech and M.Tech at IIT(ISM)Dhanbad.<br>There have been several phases in my life but initially I would like to tell about my family </p>
+  <p>Hey everyone.My name is <strong>Shivam Saraf</strong>.I am a 20 yr old guy who is pursuing dual degree for B.tech and M.Tech at IIT(ISM)Dhanbad.<br>There have been several phases in my life but initially I would like to tell about my family </p>
   </div>
   <div class="fam">
 
