--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
   <div class="fam">
 
   <h2 id="fa" align="middle" class="dec" ><em>MY FAMILY</em></h2>
+  <img src="https://scontent-maa2-1.xx.fbcdn.net/v/t1.0-0/p206x206/23031499_139583766684240_8885790714062057031_n.jpg?_nc_cat=106&oh=3602e6c1b03d7eb8fe6232b939d7d7d0&oe=5C43454D" alt="family" class="image" margin:"50%">
+  <br>
   I live in a joint family.My father's name is <strong><em>Mr Sanjay Saraf.</em></strong>and my mother's name is <strong><em>Mrs Maya Saraf</em></strong>.I have a younger brother whose name is <strong><em>Sajal Saraf</em></strong>My grandparents,uncles,cousins all live together in a single house.We belongs to Lalitpur</a> district of Uttar Pradesh state of India.My father is having his own business of sarees while my mother is a housewife.I am having a huge number of cousins namely
   <ul style="font-size:20px;">
   <li>Akash Saraf</li>
