--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   </b></div>
   <div class="abt head1">
   <h1 id="about" align="middle" font-sixe="100px" class="dec">About</h1>
-  <div class="try"><img src="https://scontent-bom1-1.xx.fbcdn.net/v/t1.0-0/p206x206/26001207_1040495039422703_4203008661810955430_n.jpg?_nc_cat=0&oh=4b159f708e8fd4b225acc48be77f61ae&oe=5BFA1ECD" alt="Shivam Saraf" class="image" margin:"50%"></div>
+  <div class="try"><img src="https://scontent.fpat1-1.fna.fbcdn.net/v/t1.0-0/p526x296/46783721_1300818286723709_2287243073517780992_n.jpg?_nc_cat=108&_nc_ht=scontent.fpat1-1.fna&oh=b35985c896b4ca6ff78e631582c4c263&oe=5C937EEC" alt="Shivam Saraf" class="image" margin:"50%"></div>
   <p>Hey everyone.My name is <strong>Shivam Saraf</strong>.I am a 20 yr old guy who is pursuing dual degree for B.tech and M.Tech at IIT(ISM)Dhanbad.<br>There have been several phases in my life but initially I would like to tell about my family </p>
   </div>
   <div class="fam">
@@ -189,7 +189,7 @@
     <p>In school life I have participated in a number of competitions especilally <b>Extempore,Sports</b>.I have grabbed gold medal in extempore competition while have been selected for my scjool team in cricket.Clearing JEE has been a very positive achievement.<br>In college i have participated in a number of events.
     <ul>
     <li>In LCI I was a part of a short film making <a href="https://www.youtube.com/watch?v=xqjwddH4yv4" target="_blank">GANGS OF JASEPUR</a></li><li>.I am also a part of debate club and have been to two external debates one at Inter IIT and other at Heritage Kolkata<br>
-<img src="https://scontent-bom1-1.xx.fbcdn.net/v/t1.0-0/s180x540/29214017_2212899112271062_1430990181409751040_n.jpg?_nc_cat=0&oh=b5e5f7a9d15ac4fddd1932275c1e7ad6&oe=5C004656" alt="Heritage participants" class="image" ><br><div align="middle">Heritage contingent pic.</div><br></li><li>.I am doing competitve coding at the online platforms like HACKERRANK and CODECHEF.<br><a href="https://www.hackerrank.com/asd_shivam98" target="_blank">My hackerrank profile</a>
+<img src="https://scontent.fpat1-1.fna.fbcdn.net/v/t1.0-9/29244293_1090674991071374_528491561612395724_n.jpg?_nc_cat=106&_nc_ht=scontent.fpat1-1.fna&oh=26ea6d2dadc13d3c49529085a68add0e&oe=5CA72E5D" alt="Heritage participants" class="image" ><br><div align="middle">Heritage contingent pic.</div><br></li><li>.I am doing competitve coding at the online platforms like HACKERRANK and CODECHEF.<br><a href="https://www.hackerrank.com/asd_shivam98" target="_blank">My hackerrank profile</a>
 <a href="https://www.codechef.com/users/shivamsalil" target="_blank">My codechef profile</a></li><li>I have won TOASTMASTER OF THE DAY award at the toastmasters meet.</li><li>I have participated in the drama at the annual function of computer science dept. <b>UDBHAV</b></li></ul>
 
 
